--- a/vignettes/rush.qmd
+++ b/vignettes/rush.qmd
@@ -24,7 +24,8 @@ The function is a toy example for optimization thats fast to evaluate but not to
 
 ```{r rush-002}
 branin = function(x1, x2) {
-  (x2 - 5.1 / (4 * pi^2) * x1^2 + 5 / pi * x1 - 6)^2 + 10 * (1 - 1 / (8 * pi)) * cos(x1) + 10
+  (x2 - 5.1 / (4 * pi^2) * x1^2 + 5 / pi * x1 - 6)^2 +
+    10 * (1 - 1 / (8 * pi)) * cos(x1) + 10
 }
 ```
 
@@ -237,7 +238,7 @@ Sys.sleep(5)
 ```
 
 ```{r rush-013}
-rush$fetch_finished_tasks()[order(y)]
+rush$fetch_finished_tasks()[order(y), .(max_depth, lambda, alpha, nrounds, rmse)]
 ```
 
 We stop the workers and reset the database.ch
