--- a/vignettes/rush.qmd
+++ b/vignettes/rush.qmd
@@ -24,8 +24,7 @@ The function is a toy example for optimization thats fast to evaluate but not to
 
 ```{r rush-002}
 branin = function(x1, x2) {
-  (x2 - 5.1 / (4 * pi^2) * x1^2 + 5 / pi * x1 - 6)^2 +
-    10 * (1 - 1 / (8 * pi)) * cos(x1) + 10
+  (x2 - 5.1 / (4 * pi^2) * x1^2 + 5 / pi * x1 - 6)^2 + 10 * (1 - 1 / (8 * pi)) * cos(x1) + 10
 }
 ```
 
