--- a/vignettes/error_handling.qmd
+++ b/vignettes/error_handling.qmd
@@ -185,11 +185,20 @@ rush$detect_lost_workers()
 Output and message logs can be written to files by specifying the `message_log` and `output_log` arguments.
 
 ```{r error_handling-015}
-rush = rsh("test-error", )
+rush = rsh("test-error")
 
-rush$start_local_workers(
+message_log = tempdir()
+output_log = tempdir()
+
+worker_ids = rush$start_local_workers(
   worker_loop = wl_error,
   n_workers = 1,
-  message_log = "message.log",
-  output_log = "output.log"
+  message_log = message_log,
+  output_log = output_log
 )
+
+Sys.sleep(5)
+
+readLines(file.path(message_log, sprintf("message_%s.log", worker_ids[1])))
+readLines(file.path(output_log, sprintf("output_%s.log", worker_ids[1])))
+```
